# MythicDungeonTools-fork

./: .gitignore  CHANGELOG.txt  DEVCONTAINER_README.md  DEVELOPMENT.md  Examples.lua  MythicDungeonTools-fork.sln  MythicDungeonTools.lua  MythicDungeonTools.toc  SETUP_COMPLETE.md  WoW-Lua-Reference.lua  dev-helper.ps1  setup.sh
.devcontainer/: Dockerfile  devcontainer.json  package.json  pyproject.toml  requirements.txt
Locales/: enUS.lua  zhCN.lua
Modules/: DungeonResetAnnounce.lua  InGameChangeLog.lua  Settings.lua  load_modules.xml
all-in-one-dev-container/: Dockerfile  README.md  pyproject.toml  requirements.txt  setup.sh
all-in-one-dev-container/.devcontainer/: devcontainer.json
example-dev-container/: Dockerfile
example-dev-container/.devcontainer/: devcontainer.json
example_routes/: rt1.txt  rt2.txt
scripts/: install_addon_libs.py
tools/: MDTDecoder.cs  README.md  mdt_decoder.js  mdt_decoder.lua  mdt_decoder.py  package.json  test_decoder.js
