[project]
name = "mdt-tools"
version = "1.0.0"
description = "Mythic Dungeon Tools - Route Decoders and Development Utilities"
authors = [{ name = "MDT Development Team", email = "developer@mdt.dev" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
  # Core dependencies for MDT route decoding
  "base64", # Base64 encoding/decoding
  # Note: zlib is built into Python standard library

  # Development and utility dependencies
  "click>=8.0.0",      # CLI interface
  "pydantic>=2.0.0",   # Data validation
  "typing-extensions", # Type hints support

  # Optional: JSON handling and data processing
  "orjson>=3.9.0",  # Fast JSON processing
  "msgpack>=1.0.0", # MessagePack serialization

  # Optional: HTTP client for API integration
  "httpx>=0.25.0",    # Modern HTTP client
  "aiofiles>=23.0.0", # Async file operations
]

[project.optional-dependencies]
dev = [
  # Development tools
  "black>=23.0.0",          # Code formatting
  "ruff>=0.1.0",            # Linting and more
  "mypy>=1.7.0",            # Type checking
  "pytest>=7.4.0",          # Testing framework
  "pytest-asyncio>=0.21.0", # Async testing
  "pytest-cov>=4.1.0",      # Coverage reporting

  # Documentation
  "mkdocs>=1.5.0",          # Documentation generator
  "mkdocs-material>=9.4.0", # Material theme

  # Jupyter for data analysis
  "jupyter>=1.0.0",    # Jupyter notebooks
  "matplotlib>=3.7.0", # Plotting
  "pandas>=2.1.0",     # Data analysis
]

test = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.1.0"]

docs = ["mkdocs>=1.5.0", "mkdocs-material>=9.4.0"]

[project.scripts]
mdt-decode = "tools.mdt_decoder:main"

[project.urls]
Homepage = "https://github.com/Nnoggie/MythicDungeonTools"
Repository = "https://github.com/Nnoggie/MythicDungeonTools"
Documentation = "https://github.com/Nnoggie/MythicDungeonTools/wiki"
"Bug Tracker" = "https://github.com/Nnoggie/MythicDungeonTools/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.7.0",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
ignore = [
  "E501", # line too long, handled by black
  "B008", # do not perform function calls in argument defaults
  "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["zlib", "base64"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests", "tools"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["tools"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]
