[project]
name = "mdt-tools"
version = "1.0.0"
description = "Mythic Dungeon Tools development and analysis utilities"
authors = [{ name = "MDT Development Team", email = "dev@mdt.tools" }]
dependencies = ["typing-extensions>=4.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=22.0.0", "ruff>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.black]
line-length = 100
target-version = ['py311']
